# project_find_buisness

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup_project.py
config/: config.json
src/database/: db.py
src/detector/: detector.py
src/exporters/: csv_exporter.py  google_sheets_exporter.py
src/notifications/: email_notifier.py  telegram_notifier.py
src/scraper/: maps_scraper.py  serp_scraper.py
src/utils/: config_loader.py
